src/objects/UDIT__c.object
<CustomObject>
    <fields>
        <fullName>AUDIT_Final_Score__c</fullName>
        <formula>AUDIT_Sub_Score_1__c  +  AUDIT_Sub_Score_2__c  +  AUDIT_Sub_Score_3__c  +  AUDIT_Sub_Score_4__c  +  AUDIT_Sub_Score_5__c  +   AUDIT_Sub_Score_6__c  +  AUDIT_Sub_Score_7__c  +  AUDIT_Sub_Score_8__c  +  AUDIT_Sub_Score_9__c  +  AUDIT_Sub_Score_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>16-24 = Harmful, 25-40 = Hazardous &amp; 20 to 40 indicates dependence</inlineHelpText>
        <label>AUDIT Final Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUDIT_Sub_Score_10__c</fullName>
        <formula>CASE(TEXT(  Has_concerned_person_suggested_cut_down__c  ),
&quot;NO&quot;, 0,
&quot;Yes, but not in last year&quot;, 2,
&quot;Yes, during the last year&quot;, 4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUDIT Sub Score 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUDIT_Sub_Score_1__c</fullName>
        <formula>CASE( TEXT(How_often_do_you_drink_alcohol__c) , 
&quot;NEVER&quot;, 0,
&quot;Monthly or less&quot;, 1,
&quot;2 to 4 times a month&quot;, 2,
&quot;2 to 3 times a week&quot;, 3,
&quot;4 or more times a week&quot;,4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUDIT Sub Score 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUDIT_Sub_Score_2__c</fullName>
        <formula>CASE( TEXT( How_many_drinks_do_you_have_typical_day__c ) ,
&quot;1 or 2&quot;, 0,
&quot;3 or 4&quot;, 1,
&quot;5 or 6&quot;, 2,
&quot;7 to 9&quot;, 3,
&quot;10 or more&quot;, 4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUDIT Sub Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Client__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anyone_worried_about_your_drug_use__c</fullName>
        <inlineHelpText>Concern from others
11. Has a relative or a friend, a doctor or a nurse, or anyone else, been worried about your drug use or said to you that you should stop using drugs?</inlineHelpText>
        <label>Anyone worried about your drug use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, but not over the last year</fullName>
                </value>
                <value>
                    <fullName>Yes, over the last year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CUDIT_Sub_Score_1__c</fullName>
        <formula>CASE(TEXT( How_often_do_you_use_cannabis__c ), 
&quot;Never&quot;, 0,
&quot;Monthly or less&quot;, 1,
&quot;2-4 Times A Month&quot;, 2,
&quot;2-3 times a week&quot;, 3,
&quot;4 or more times a week&quot;, 4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUDIT Sub Score 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUDIT_Sub_Score_2__c</fullName>
        <formula>CASE(TEXT( Hours_were_you_stoned_using_cannabis__c ), 
&quot;Less than 1&quot;, 0,
&quot;1 or 2&quot;, 1,
&quot;3 or 4&quot;, 2,
&quot;5 or 6&quot;, 3,
&quot;7 or more&quot;, 4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUDIT Sub Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUDIT_Sub_Score_3__c</fullName>
        <formula>CASE(TEXT( How_often_unable_to_stop_using_cannabis__c ), 
&quot;Never&quot;, 0,
&quot;Less than monthly&quot;, 1,
&quot;Monthly&quot;, 2, 
&quot;Weekly&quot;, 3,
&quot;Daily or almost daily&quot;,4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUDIT Sub Score 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUDIT_Total_Score__c</fullName>
        <formula>CUDIT_Sub_Score_1__c + CUDIT_Sub_Score_2__c + CUDIT_Sub_Score_3__c + CUDIT_Sub_Score_4__c + CUDIT_Sub_Score_5__c + CUDIT_Sub_Score_6__c + CUDIT_Sub_Score_7__c + CUDIT_Sub_Score_8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUDIT Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UDIT</relationshipLabel>
        <relationshipName>UDIT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_progress_to_an_initial_assessment__c</fullName>
        <inlineHelpText>Is it recommended service user progress to an initial assessment?</inlineHelpText>
        <label>Client progress to an initial assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_given_to_refer_1__c</fullName>
        <label>Consent given to refer 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_given_to_refer_2__c</fullName>
        <label>Consent given to refer 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_given_to_refer_3__c</fullName>
        <label>Consent given to refer 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUDIT_Sub_Score_10__c</fullName>
        <formula>CASE(TEXT(  Mental_physically_hurt_because_used_drug__c ),
&quot;NO&quot;,0,
&quot;Yes, but not over the last year&quot;,2,
&quot;Yes, over the last year&quot;,4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUDIT Sub Score 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUDIT_Sub_Score_11__c</fullName>
        <formula>CASE(TEXT( Anyone_worried_about_your_drug_use__c  ),
&quot;NO&quot;,0,
&quot;Yes, but not over the last year&quot;,2,
&quot;Yes, over the last year&quot;,4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUDIT Sub Score 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUDIT_Sub_Score_1__c</fullName>
        <formula>CASE(TEXT( How_often_use_drugs_other_than_alcohol__c ), 
&quot;Never&quot;,0,
&quot;Once a month or less often&quot;,1,
&quot;2-4 times a month&quot;,2,
&quot;2-3 times a week&quot;,3,
&quot;4 times a week or more&quot;,4,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUDIT Sub Score 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Assessment__c</fullName>
        <label>Date of Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discussed_a_follow_up_plan_from__c</fullName>
        <inlineHelpText>We have discussed a follow up plan from this service on any agreed referrals as part of this screening process?</inlineHelpText>
        <label>Discussed a follow up plan from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discussed_outcome_CUDIT_R_with_client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you discussed the outcome of the CUDIT -R with the service user and provided brief intervention?</inlineHelpText>
        <label>Discussed outcome CUDIT-R  with client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_outcome_of_AUDIT_with_client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you discussed the outcome of the AUDIT with the service user and provided brief intervention</inlineHelpText>
        <label>Discussed outcome of AUDIT with client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_reason_why_service_be_helpful__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a referral is required to another substance misuse service; you have discussed with service user the reason why this would be helpful</inlineHelpText>
        <label>Discussed reason why service be helpful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fail_to_do_the_expected_due_to_cannabis__c</fullName>
        <inlineHelpText>4. How often during the past 6 months did you fail to do what was normally expected from you because of using cannabis?</inlineHelpText>
        <label>Fail to do the expected due to cannabis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fail_to_do_the_expected_due_to_drugs__c</fullName>
        <inlineHelpText>Priority of drug use
7. How often over the past year have you taken drugs and then not done something you should have done?</inlineHelpText>
        <label>Fail to do the expected due to drugs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less often than once a month</fullName>
                </value>
                <value>
                    <fullName>Every month</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT( Client__r.X4_Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Had_guilt_feelings_because_you_used_drug__c</fullName>
        <inlineHelpText>Guilt feelings
9. How often over the past year have you had guilt feelings or a bad conscience because you used drugs?</inlineHelpText>
        <label>Had guilt feelings because you used drug</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less often than once a month</fullName>
                </value>
                <value>
                    <fullName>Every month</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_concerned_person_suggested_cut_down__c</fullName>
        <inlineHelpText>10. Has a relative, friend, doctor or other health care worker been concerned about your drinking or suggested you cut down?</inlineHelpText>
        <label>Has concerned person suggested cut down</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>Yes, but not in last year</fullName>
                </value>
                <value>
                    <fullName>Yes, during the last year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_injured_because_of_drink__c</fullName>
        <inlineHelpText>9. Have you or someone else been injured because of your drinking?</inlineHelpText>
        <label>Have you been injured because of drink</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>Yes, but not in last year</fullName>
                </value>
                <value>
                    <fullName>Yes, during the last year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_thought_stopping_cannabis__c</fullName>
        <inlineHelpText>8. Have you ever thought about cutting down, or stopping, your use of cannabis?</inlineHelpText>
        <label>Have you ever thought stopping cannabis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Yes, but not in the past 6 months</fullName>
                </value>
                <value>
                    <fullName>Yes, during the past 6 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_were_you_stoned_using_cannabis__c</fullName>
        <inlineHelpText>2. How many hours were you ‘stoned’ on a typical day when you had been using cannabis?</inlineHelpText>
        <label>Hours were you stoned using cannabis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1</fullName>
                </value>
                <value>
                    <fullName>1 or 2</fullName>
                </value>
                <value>
                    <fullName>3 or 4</fullName>
                </value>
                <value>
                    <fullName>5 or 6</fullName>
                </value>
                <value>
                    <fullName>7 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_drinks_do_you_have_typical_day__c</fullName>
        <inlineHelpText>2. How many standard drinks containing alcohol do you have on a typical day when you are drinking?</inlineHelpText>
        <label>How many drinks do you have typical day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 or 2</fullName>
                </value>
                <value>
                    <fullName>3 or 4</fullName>
                </value>
                <value>
                    <fullName>5 or 6</fullName>
                </value>
                <value>
                    <fullName>7 to 9</fullName>
                </value>
                <value>
                    <fullName>10 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_do_you_drink_alcohol__c</fullName>
        <inlineHelpText>1. How often do you have a drink containingc alcohol?</inlineHelpText>
        <label>How often do you drink alcohol?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Monthly or less</fullName>
                </value>
                <value>
                    <fullName>2 to 4 times a month</fullName>
                </value>
                <value>
                    <fullName>2 to 3 times a week</fullName>
                </value>
                <value>
                    <fullName>4 or more times a week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_do_you_have_5_or_more_drinks__c</fullName>
        <inlineHelpText>3. How often do you have 5 or more drinks in one occasion?</inlineHelpText>
        <label>How often do you have 5 or more drinks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_do_you_use_cannabis__c</fullName>
        <inlineHelpText>1. How often do you use cannabis?</inlineHelpText>
        <label>How often do you use cannabis?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Monthly or less</fullName>
                </value>
                <value>
                    <fullName>2-4 Times A Month</fullName>
                </value>
                <value>
                    <fullName>2-3 times a week</fullName>
                </value>
                <value>
                    <fullName>4 or more times a week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_unable_to_stop_using_cannabis__c</fullName>
        <inlineHelpText>3. How often during the past 6 months did you find that you were not able to stop using cannabis once you had started?</inlineHelpText>
        <label>How often unable to stop using cannabis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_use_drugs_other_than_alcohol__c</fullName>
        <inlineHelpText>Frequency per week/month
1. How often do you use drugs other than alcohol?</inlineHelpText>
        <label>How often use drugs other than alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Once a month or less often</fullName>
                </value>
                <value>
                    <fullName>2-4 times a month</fullName>
                </value>
                <value>
                    <fullName>2-3 times a week</fullName>
                </value>
                <value>
                    <fullName>4 times a week or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_you_failed_do_expected_of_you__c</fullName>
        <inlineHelpText>5. How often in the last year have you failed to do what was normally expected of you because of drinking?</inlineHelpText>
        <label>How often you failed do expected of you</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_you_had_a_remorse_after_drink__c</fullName>
        <inlineHelpText>7. How often during the last year have you had a feeling of guilt or remorse after drinking?</inlineHelpText>
        <label>How often you had a remorse after drink</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_you_heavily_influenced_by_drug__c</fullName>
        <inlineHelpText>Heavy use
4. How often are you heavily influenced by drugs</inlineHelpText>
        <label>How often you heavily influenced by drug</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less often than once a month</fullName>
                </value>
                <value>
                    <fullName>Every month</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_you_needed_a_drink_in_morning__c</fullName>
        <inlineHelpText>6. How often during the last year have you needed a first drink in the morning to get yourself going ager a heavy drinking session?</inlineHelpText>
        <label>How often you needed a drink in morning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_you_unable_remember_last_night__c</fullName>
        <inlineHelpText>8. How often during the last year have you been unable to remember what happened the night before because of your drinking?</inlineHelpText>
        <label>How often you unable remember last night</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_you_were_not_able_stop_drink__c</fullName>
        <inlineHelpText>4. How often during the last year have you found that you were not able to stop drinking once you started?</inlineHelpText>
        <label>How often you were not able stop drink</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_specify_risk_assessment_required__c</fullName>
        <inlineHelpText>If yes, what is the identified risk assessment(s) required?</inlineHelpText>
        <label>If yes, specify risk assessment required</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_specify_risk_identfied__c</fullName>
        <inlineHelpText>If yes, what is the identified risk assessment(s) required?</inlineHelpText>
        <label>If yes, specify risk identfied</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Info_to_be_provided_back_to_ref_agency__c</fullName>
        <inlineHelpText>Have you discussed with the service user follow up information to be provided back to the referring agency and have agreed the information to be feedback?</inlineHelpText>
        <label>Info to be provided back to ref agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_for_drugs_so_strong_couldn_t_resist__c</fullName>
        <inlineHelpText>Craving
5. Over the past year, have you felt that your longing for drugs was so strong that you could not resist it?</inlineHelpText>
        <label>Long for drugs so strong couldn&apos;t resist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less often than once a month</fullName>
                </value>
                <value>
                    <fullName>Every month</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mental_physically_hurt_because_used_drug__c</fullName>
        <inlineHelpText>Harmful use
10. Have you or anyone else been mentally/physically hurt because you used drugs?</inlineHelpText>
        <label>Mental/physically hurt because used drug</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, but not over the last year</fullName>
                </value>
                <value>
                    <fullName>Yes, over the last year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Assessment_Keyworker__c</fullName>
        <label>Name of Assessment Keyworker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_to_service_user_debrief_session__c</fullName>
        <inlineHelpText>Have you offered the service user a debrief session?</inlineHelpText>
        <label>Offered to service user debrief session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_of_CUDIT_R__c</fullName>
        <formula>CASE( CUDIT_Total_Score__c ,
1,&quot;Low risk&quot;,
2,&quot;Low risk&quot;,
3,&quot;Low risk&quot;,
4,&quot;Low risk&quot;,
5,&quot;Low risk&quot;,
6,&quot;Low risk&quot;,
7,&quot;Low risk&quot;,
8,&quot;Low risk&quot;,
9,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
10,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
11,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
12,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
13,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
14,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
15,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
16,&quot;Hazardous cannabis use. You are likely to be having cannabis related problems&quot;,
17,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
18,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
19,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
20,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
21,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
22,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
23,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
24,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
25,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
26,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
27,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
28,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
29,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
30,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
31,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
32,&quot;High level of cannabis use. You are most likely dependant on the drug&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome of CUDIT - R</label>
        <type>Text</type>
    </fields>
</CustomObject>